--- a/v1.md
+++ b/v1.md
@@ -2,8 +2,6 @@
 
 ## Introduction
 
-Learn how you can build a newsletter system using Strapi. This includes sending newsletters to a mailing list of subscribers and adding new subscribers using a sign up form.
-
 ## Prerequisites
 
 - [Node.js LTS version 18, 20, or 22](https://nodejs.org/en/download)
@@ -53,6 +51,10 @@ The following files will be generated:
 - /api/email-news/services/email-news.js
 
 ### Configure Brevo
+
+<!--How do you send an email using Strapi and Brevo API
+- Get API key
+- Add API key to env var -->
 
 [Sign in to your Brevo account](https://login.brevo.com) and generate a new API key in the [API keys page](https://app.brevo.com/settings/keys/api).
 
@@ -209,7 +211,7 @@ Click **Settings** then **Users & Permissions Plugin** then **Roles** and then *
 
 ### Add new API controller
 
-The objective is to fetch an entry from the Subscriber collection using the `documentId` of the entry. Use `email` and `name` fields to construct and send an email to the user.
+The objective is to fetch an entry from the Subscriber collection using the `documentId` of the entry. Use `email` and `name` fields to construct and send an email to the user. <!--This method uses the [Entity Service API]().-->
 
 Add a new controller, `sendToSubscriber` in `newsletter/src/api/email-news/controllers/email-news.js` below the `send` controller we created earlier.
 ```js
@@ -227,7 +229,15 @@ module.exports = {
         return ctx.badRequest("Missing required fields: id, subject, htmlContent");
       }
 
-      //Fetch subscriber from database - Using Document Service API 
+      // Fetch subscriber from database
+
+      //Using Entity Service API
+      /*const subscriber = await strapi.entityService.findOne("api::subscriber.subscriber", id, {
+        fields: ["name", "email"],
+      });
+      */
+
+      //Using Document Service API 
       const subscriber = await strapi.documents("api::subscriber.subscriber").findOne({
         documentId: id,
         fields: ["name", "email"],        
@@ -280,6 +290,20 @@ We have added a new route `/send-email-to-subscriber` for the `sendToSubscriber`
 
 ### Test API
 
+<!--
+Restart Strapi server and then test the API:
+```shell
+curl -X POST http://localhost:1337/api/send-email-to-subscriber \
+     -H "Content-Type: application/json" \
+     -d '{
+            "id": 1,
+            "subject": "Test 2: Hello, {name}!",
+            "htmlContent": "<p>Dear {name}, thank you for subscribing!</p>"
+         }'
+```
+-->
+
+<!-- Document Service API alternative -->
 First retrieve the `documentId` for the Subscriber entry you created earlier.
 
 ```shell
@@ -347,8 +371,16 @@ module.exports = {
         return ctx.badRequest("Missing required fields: subject, htmlContent");
       }
   
-      // Fetch all subscribers - Using Document Service API
+      // Fetch all subscribers
 
+      //Using Entity Service API
+      /*
+      const subscribers = await strapi.entityService.findMany("api::subscriber.subscriber", {
+        fields: ["name", "email"],
+      });
+      */
+
+     //Using Document Service API
      const subscribers = await strapi.documents("api::subscriber.subscriber").findMany({
         fields: ["name", "email"],
      });
@@ -449,8 +481,15 @@ module.exports = createCoreController('api::newsletter.newsletter', ({ strapi })
         return ctx.badRequest("Missing required field: id");
       }
 
-      // Fetch the newsletter from the collection - Using Document Service API
+      // Fetch the newsletter from the collection
 
+      // Using Entity Service API
+      /*const newsletter = await strapi.entityService.findOne("api::newsletter.newsletter", id, {
+        fields: ["title", "content"],
+      });
+      */
+
+      // Using Document Service API
       const newsletter = await strapi.documents("api::newsletter.newsletter").findOne({
         documentId: id,
         fields: ["title", "content"],
@@ -462,8 +501,16 @@ module.exports = createCoreController('api::newsletter.newsletter', ({ strapi })
 
       const { title, content } = newsletter;
 
-      // Fetch all subscribers - Using Document Service API
+      // Fetch all subscribers
 
+      //Using Entity Service API
+      /*
+      const subscribers = await strapi.entityService.findMany("api::subscriber.subscriber", {
+        fields: ["name", "email"],
+      });
+      */
+
+      //Using Document Service API
       const subscribers = await strapi.documents("api::subscriber.subscriber").findMany({
         fields: ["name", "email"],
       });
@@ -492,6 +539,10 @@ module.exports = createCoreController('api::newsletter.newsletter', ({ strapi })
 }));
 ```
 
+<!--
+The `sendToAllSubscribers` controller fetches all the subscriber entries from the **Subscriber** collection, retrieves the corresponding `name` and `email` for each **Subscriber** then sends an email using the `sendEmail` service.
+-->
+
 This `sendNewsletter` controller fetches a newsletter entry from the **Newsletter** collection, fetches all the subscribers from the **Subscriber** collection then sends an email containing the newsletter to using the `sendEmail` service to each subscriber.
 
 ### Create a Custom Route to Send Newsletters
@@ -515,6 +566,18 @@ module.exports = {
 
 ### Test API
 
+<!--
+```shell
+curl -X POST http://localhost:1337/api/send-newsletter \
+     -H "Content-Type: application/json" \
+     -d '{
+           "id": 1
+         }'
+
+```
+-->
+
+<!-- Document Service API alternative -->
 First retrieve the `documentId` for the Newsletter entry you created earlier.
 
 ```shell
@@ -562,7 +625,9 @@ Create `src/api/newsletter/content-types/newsletter/lifecycles.js`:
 module.exports = {
     async afterCreate(event) {
       const { result } = event;
+      //console.log(result);
       if (result.publishedAt) {
+        //await sendNewsletterToSubscribers(result.id); // Entity Service API
         await sendNewsletterToSubscribers(result.documentId);
       }
     },
@@ -571,6 +636,7 @@ module.exports = {
       const { result, params } = event;
       // Check if the newsletter was just published
       if (result.publishedAt && (!params.data.publishedAt || params.data.publishedAt === result.publishedAt)) {
+        //await sendNewsletterToSubscribers(result.id); // Entity Service API
         await sendNewsletterToSubscribers(result.documentId);
       }
     },
@@ -579,6 +645,13 @@ module.exports = {
   async function sendNewsletterToSubscribers(id) {
     try {
       // Fetch the newsletter from the Newsletter collection
+
+      //Entity Service API
+      /*
+      const newsletter = await strapi.entityService.findOne("api::newsletter.newsletter", id, {
+        fields: ["title", "content"],
+      });
+      */
 
       const newsletter = await strapi.documents("api::newsletter.newsletter").findOne({
         documentId: id,
@@ -592,8 +665,16 @@ module.exports = {
   
       const { title, content } = newsletter;
   
-      // Fetch all subscribers - using Document Service API
+      // Fetch all subscribers
 
+      // Entity Service API
+      /*
+      const subscribers = await strapi.entityService.findMany("api::subscriber.subscriber", {
+        fields: ["name", "email"],
+      });
+      */
+
+     // Document Service API
       const subscribers = await strapi.documents("api::subscriber.subscriber").findMany({
         fields: ["name", "email"],
       });
@@ -654,6 +735,19 @@ The allowed actions for the Subscriber collection API should now be `create`, `f
 
 ### Test 
 
+<!--Test creating a new Subscriber using curl.
+```shell
+curl -X POST http://localhost:1337/api/subscribers \
+     -H "Content-Type: application/json" \
+     -d '{
+           "data": {
+             "name": "Craig",
+             "email": "craigsimakando@gmail.com"
+           }
+         }'
+```
+-->
+
 Test creating a new Subscriber using curl.
 ```shell
 curl -X POST http://localhost:1337/api/subscribers \
@@ -686,6 +780,12 @@ Verify the new list of subscribers.
 ```shell
 curl -X GET http://localhost:1337/api/subscribers
 ```
+
+<!--
+Jane jane@email.com
+Craig craig@email.com
+John john@doe.com
+-->
 
 ![New subscriber list](https://res.cloudinary.com/craigsims808/image/upload/v1741380040/strapi/newsletter/new-subscriber-list_fvuyo7.png)
 
@@ -1148,6 +1248,323 @@ module.exports = (config, { strapi }) => {
 
 Test the email duplication check by entering a duplicate email in your newsletter subscription form.
 
+### Spam (Rate Limiting)
+
+To prevent abuse of the subscription form, we can add rate limiting to the middleware.
+
+Update `src/middlewares/form-handler.js` with the following code:
+
+```js
+module.exports = (config, { strapi }) => {
+  const rateLimitStore = new Map();
+  const RATE_LIMIT = 5; // Maximum requests
+  const RATE_WINDOW = 60 * 60 * 1000; // Time window in ms (1 hour)
+
+  const getRateLimitKey = (ctx) => {
+    return ctx.request.ip;
+  };
+
+  return async (ctx, next) => {
+    if (ctx.path === '/api/subscribers' && ctx.method === 'POST') {
+      const key = getRateLimitKey(ctx);
+      const now = Date.now();
+
+      // Get or initialize rate limit data for this key
+      if (!rateLimitStore.has(key)) {
+        rateLimitStore.set(key, { count: 0, resetAt: now + RATE_WINDOW});
+      }
+
+      const limitData = rateLimitStore.get(key);
+
+      // Reset counter if time window has passed
+      if (now > limitData.resetAt) {
+        limitData.count = 0;
+        limitData.resetAt = now + RATE_WINDOW;
+      }
+
+      // Check if rate limit exceeded
+      if (limitData.count >= RATE_LIMIT) {
+        ctx.status = 429; //Too many requests
+        ctx.body = {
+          error: 'Rate limit exceeded',
+          message: 'Too many subscription attempts. Please try again later.',
+          retryAfter: Math.ceil((limitDat))
+        };
+        return;
+      }
+
+      // Increment counter
+      limitData.count++;
+      rateLimitStore.set(key, limitData);
+
+      // Add rate limit headers
+      ctx.set('X-RateLimit-Limit', RATE_LIMIt.toString());
+      ctx.set('X-RateLimit-Remaining', (RATE_LIMIT - limitData.count).toString());
+      ctx.set('X-RateLimit-Reset', Math.ceil(limitData.resetAt / 1000).toString());
+
+      // Continue with validation
+      const { name, email } = ctx.request.body.data;
+
+      // Initialize errors array
+      const errors = [];
+
+      // Validate name
+      if (!name) {
+        errors.push({ field: 'name', message: 'Name is required' });
+      } else if (name.length > 255) {
+        errors.push({ field: 'name', message: 'Name must be 255 characters or less'})
+      }
+
+      // Validate email
+      const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      if (!email) {
+        errors.push({ field: 'email', message: 'Email is required' });
+      } else if (!emailRegex.test(email)) {
+        errors.push({ field: 'email', message: 'Please provide a valid email address' });
+      }
+      
+      // Check for existing email to prevent duplicates
+      if (email && emailRegex.test(email)) {
+        try {
+          const existingSubscriber = await strapi.documents("api::subscriber.subscriber").findMany({
+            filters: { email: email },
+          });
+
+          if (existingSubscriber && existingSubscriber.length > 0) {
+            errors.push({ field: 'email', message: 'This email is already subscribed' });
+          }
+        } catch (error) {
+          strapi.log.error('Error checking for existing email:', error);
+        }
+      }
+
+      // Display errors
+      if (errors.length > 0) {
+        ctx.status = 400;
+        ctx.body = { errors };
+        return; // Stop execution and don't proceed to next middleware
+      }
+
+      // Log valid submission
+      strapi.log.info(`Valid Submission - Name: ${name} Email: ${email}`);
+      }
+      await next();
+
+    };
+  };
+```
+
+The rate limiting logic is as follows:
+- Requests are tracked using IP address.
+- A counter is incremented each time a request is made.
+- A `429` error code is return when the limit is exceeded
+
+This implementation adds rate limiting with the following features:
+- In-memory rate limiting store, `rateLimitStore` using a Map to track request counts by IP address
+- Configurable rate limit settings using `RATE_LIMIT` variable to set maximum number of requests (set to 5) and `RATE_WINDOW` variable to limit the time to 1 hour.
+
+To handle the rate limiting in your Next.js frontend, update `app/page.tsx` as follows:
+
+```tsx
+"use client";
+
+import React from "react";
+import { useState } from "react";
+
+export default function Page() {
+  const [name, setName] = useState("");
+  const [email, setEmail] = useState("");
+  const [message, setMessage] = useState("");
+
+  const handleSubmit = async (e: React.FormEvent) => {
+    e.preventDefault();
+
+    try {
+      const response = await fetch("http://localhost:1337/api/subscribers", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          data: { name, email },
+        }),
+      });
+
+      const data = await response.json();
+
+      if (!response.ok) {
+        if (response.status === 429) {
+          //Handle rate limiting
+          setMessage(`${data.message} Please try again in ${Math.ceil(data.retryAfter / 60)} minutes.`);
+        } else if (data.errors) {
+          // Display specific validation errors
+          setMessage(data.errors.map(err => `${err.field}: ${err.message}`).join(', '));
+        } else {
+          throw new Error("Failed to subscribe");
+        }
+      } else {
+        setMessage("Subscription successful!");
+        setName("");
+        setEmail("");
+      }
+    } catch (error) {
+      setMessage("Subscription failed. Try again.");
+    }
+  };
+
+  return (
+    <div>
+      <form onSubmit={handleSubmit}>
+        <label htmlFor="name">Name:</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          value={name}
+          onChange={(e) => setName(e.target.value)}
+          required
+        />
+
+        <label htmlFor="email">Email:</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          value={email}
+          onChange={(e) => setEmail(e.target.value)}
+          required
+        />
+
+        <button type="submit">Subscribe</button>
+      </form>
+
+      {message && <p>{message}</p>}
+    </div>
+  );
+}
+```
+
+## Landing page design
+
+We need to incoporate a landing page design that mimics a real-life situation. A good example, can be a landing page for a short story author who needs to send newsletters to avid readers. 
+
+The landing page will have a header with the author's name, description and a few of his works. The next section is the Newsletter subscription section which will include the form we have created previously. Finally, the footer section which will include the contact details of the author.
+
+<!--
+In a single page using HTML and CSS (Tailwind CSS), create a modern looking, mobile responsive landing page for a short story author. The landing page will have 3 sections a Header, Newsletter subscription section and a Footer. The Header will the author's name, description and links to a few of his works. The newsletter subscription section will have a form that receives the name and email address of the subscriber. The footer section will have the author's contact information and copyright.
+-->
+
+![Landing page design](https://res.cloudinary.com/craigsims808/image/upload/v1744305171/strapi/newsletter/landing-page-design-opt_dzyajm.png)
+
+For styling we will use Tailwind CSS.
+
+Here is the HTML for the design:
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alex Morgan - Short Story Author</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-50 font-sans text-gray-800">
+    <!-- Header Section -->
+    <header class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white">
+        <div class="container mx-auto px-4 py-16 md:py-24">
+            <div class="flex flex-col md:flex-row items-center justify-between">
+                <div class="md:w-1/2 text-center md:text-left mb-8 md:mb-0">
+                    <h1 class="text-4xl md:text-5xl font-bold mb-4">Alex Morgan</h1>
+                    <p class="text-lg md:text-xl opacity-90 mb-6">Crafting worlds one story at a time. Award-winning author of contemporary fiction that explores the human condition through intimate character studies.</p>
+                    <div class="flex flex-wrap justify-center md:justify-start gap-3">
+                        <a href="#" class="bg-white text-indigo-600 px-4 py-2 rounded-lg hover:bg-opacity-90 transition duration-300">About</a>
+                        <a href="#" class="bg-transparent border border-white text-white px-4 py-2 rounded-lg hover:bg-white hover:text-indigo-600 transition duration-300">Contact</a>
+                    </div>
+                </div>
+                <div class="md:w-1/2">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <div class="bg-white bg-opacity-20 backdrop-filter backdrop-blur-sm p-6 rounded-lg hover:bg-opacity-30 transition duration-300">
+                            <h3 class="font-semibold text-xl mb-2">Echoes of Silence</h3>
+                            <p class="text-sm opacity-80">A collection of interconnected stories exploring themes of isolation in modern society.</p>
+                            <a href="#" class="inline-block mt-3 text-white underline hover:no-underline">Read excerpt →</a>
+                        </div>
+                        <div class="bg-white bg-opacity-20 backdrop-filter backdrop-blur-sm p-6 rounded-lg hover:bg-opacity-30 transition duration-300">
+                            <h3 class="font-semibold text-xl mb-2">The Last Light</h3>
+                            <p class="text-sm opacity-80">Winner of the National Short Fiction Prize. A poignant tale of loss and redemption.</p>
+                            <a href="#" class="inline-block mt-3 text-white underline hover:no-underline">Read excerpt →</a>
+                        </div>
+                        <div class="bg-white bg-opacity-20 backdrop-filter backdrop-blur-sm p-6 rounded-lg hover:bg-opacity-30 transition duration-300 md:col-span-2">
+                            <h3 class="font-semibold text-xl mb-2">New Release: "Beneath the Surface"</h3>
+                            <p class="text-sm opacity-80">My latest collection explores the hidden currents that pull beneath ordinary lives.</p>
+                            <a href="#" class="inline-block mt-3 text-white underline hover:no-underline">Learn more →</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Newsletter Section -->
+    <section class="py-16 bg-white">
+        <div class="container mx-auto px-4">
+            <div class="max-w-2xl mx-auto text-center">
+                <h2 class="text-3xl font-bold mb-6">Join My Newsletter</h2>
+                <p class="text-gray-600 mb-8">Subscribe to receive new story alerts, writing insights, and exclusive content directly to your inbox.</p>
+                <form class="space-y-4">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                        <div>
+                            <label for="name" class="sr-only">Full Name</label>
+                            <input type="text" id="name" placeholder="Your Name" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                        </div>
+                        <div>
+                            <label for="email" class="sr-only">Email Address</label>
+                            <input type="email" id="email" placeholder="Email Address" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500">
+                        </div>
+                    </div>
+                    <button type="submit" class="w-full md:w-auto px-6 py-3 bg-indigo-600 text-white font-medium rounded-lg hover:bg-indigo-700 transition duration-300">Subscribe Now</button>
+                </form>
+                <p class="text-xs text-gray-500 mt-4">I respect your privacy. Unsubscribe at any time.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer class="bg-gray-900 text-white py-12">
+        <div class="container mx-auto px-4">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="text-center md:text-left mb-6 md:mb-0">
+                    <h3 class="text-2xl font-bold mb-2">Alex Morgan</h3>
+                    <p class="text-gray-400">author@alexmorgan.com</p>
+                    <p class="text-gray-400">Literary Agency: Bright Words Inc.</p>
+                </div>
+                <div class="flex space-x-4">
+                    <a href="#" class="h-10 w-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-indigo-600 transition duration-300">
+                        <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                    <a href="#" class="h-10 w-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-indigo-600 transition duration-300">
+                        <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
+                        </svg>
+                    </a>
+                    <a href="#" class="h-10 w-10 rounded-full bg-gray-800 flex items-center justify-center hover:bg-indigo-600 transition duration-300">
+                        <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z" clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <div class="border-t border-gray-800 mt-8 pt-8 text-center">
+                <p class="text-gray-400 text-sm">&copy; 2025 Alex Morgan. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
+```
+
 ## Clean Up
 
 - Disable open access to API
@@ -1157,17 +1574,7 @@ Test the email duplication check by entering a duplicate email in your newslette
 - Remove send email to collection (1 user) code - (controller and route)
 - Remove send email to all subscribers code - (controller and route)
 - Remove send newsletter email to all subscribers code - (controller and route)
+
 - Does Document Service API work without the need for public access to API
 
-<!--
-No one should be able to view the list of subscribers via API
--->
-
 ## Conclusion
-
-## Resources
-
-- [Article Source Code]()
-- [Strapi Docs]()
-- [Next.js Docs]()
-- [Brevo Docs]()
